2001-04-16  Darin Adler  <darin@eazel.com>

	* libnautilus-extensions/nautilus-monitor.c: (get_fam_connection):
	Don't give a warning if there's no FAM daemon to connect to, just
	silently don't use FAM.
	(process_fam_notifications): Improve wording of the warning you
	get when FAM goes away.

2001-04-16  Darin Adler  <darin@eazel.com>

	Changes to use FAM if it's there. Now the hard part is getting FAM
	installed on people's systems.

	* libnautilus-extensions/nautilus-directory-async.c:
	(find_monitor): Tightened up the function.
	(monitor_file_compare), (find_any_monitor): Functions to see if a
	file still has a reason to be monitored.
	(nautilus_directory_monitor_add_internal): Start FAM monitoring.
	(nautilus_directory_monitor_remove_internal): Stop FAM monitoring.
	* libnautilus-extensions/nautilus-directory-private.h: Add a place
	to keep track of the FAM monitor.
	* libnautilus-extensions/nautilus-file-private.h: Add a place
	to keep track of the FAM monitor.
	* libnautilus-extensions/nautilus-directory.c:
	(nautilus_directory_destroy): Stop FAM monitoring.
	* libnautilus-extensions/nautilus-file.c: (destroy): Stop FAM
	monitoring.
	
	* libnautilus-extensions/nautilus-monitor.c:
	(get_event_uri): Use FAMREQUEST_GETREQNUM instead of going
	directly at the struct.
	(process_fam_notifications): Get rid of the messages and call
	nautilus_file_changes_consume_changes on the way out.
	(nautilus_monitor_file): Get rid of the message.
	(nautilus_monitor_directory): Get rid of the message and use
	FAMREQUEST_GETREQNUM instead of going directly at the struct.
	(nautilus_monitor_cancel): Get rid of the message and use
	FAMREQUEST_GETREQNUM instead of going directly at the struct.

2001-04-16  Ramiro Estrugo  <ramiro@eazel.com>

	* libnautilus/Makefile.am:
	Add missing eel includes.
	
2001-04-16  Darin Adler  <darin@eazel.com>

	Some work on FAM.

	* libnautilus-extensions/nautilus-monitor.h:
	* libnautilus-extensions/nautilus-monitor.c: (get_fam_connection),